# EverythingBrowser

./: docker-compose.test-ssh.yml  index.html  package-lock.json  package.json  vite.config.ts
.agent/: config.json
.agent/threads/2e74628c-823b-4248-bb48-8090172d9487/: thread.json
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: CNAME  index.html  install.ps1  install.sh
docs/superpowers/plans/: 2026-03-15-auto-updater.md  (+1 more)
src/: App.tsx  DetachedWindow.tsx  SettingsWindow.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  watcher.rs
src-tauri/src/commands/: connection_commands.rs  credential_commands.rs  docker_commands.rs  editor_commands.rs  file_commands.rs  mod.rs  watcher_commands.rs
src-tauri/src/connection/: config.rs  mod.rs
src-tauri/src/credentials/: mod.rs
src-tauri/src/importer/: mod.rs  putty.rs  winscp.rs
src-tauri/src/provider/: b2.rs  docker_common.rs  docker_exec.rs  docker_volume.rs  local_fs.rs  mod.rs  registry.rs  sftp.rs
src/contexts/: file-browser-context.tsx
src/hooks/: use-connections.ts  use-file-browser.ts  use-keyboard-shortcuts.ts  use-theme.ts  use-transfer-queue.ts  use-update-checker.ts
src/lib/: keyboard.ts  utils.ts
src/services/: connection-service.ts  file-service.ts  import-service.ts
src/stores/: use-keybindings-store.ts  use-layout-store.ts  use-settings-store.ts  use-tabs-store.ts
src/styles/: globals.css
src/types/: connection.ts  filesystem.ts  transfer.ts
(+35 files in other folders)
